# simple_render

./: CMakeLists.txt  README.md  main.cpp
include/: dataType.hpp  light.h  load_model.hpp  renderModel.h  render_triangle.h  tiny_obj_loader.hpp  triangleProcess.hpp
src/: light.cpp  load_model.cpp  renderModel.cpp  render_triangle.cpp  triangleProcess.cpp
